--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "fredyns/yii2-location",
-    "description": "Location & postcode database (Indonesian) for Yii2 Framework",
+    "name": "fredyns/yii2-region",
+    "description": "Region & postcode module with Indonesian database included for Yii2 Framework.",
     "type": "yii2-extension",
     "keywords": [
         "yii2",
         "extension",
         "suite",
-        "location",
+        "region",
         "postcode",
         "indonesia",
         "database daerah",
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "fredyns\\location\\": "sourcecode"
+            "fredyns\\region\\": "sourcecode"
         }
     }
 }
